--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -22,7 +22,7 @@ const { userId } : { userId: string | null } = auth();
 
 When using a Clerk integration, or if you need to send a JWT along to a server, you can use the `getToken` function.
 
-```tsx filename="app/api/example/route.[jsx/tsx]"
+```tsx filename="app/page.[jsx/tsx]"
 import { NextResponse } from 'next/server';
 import { auth } from '@clerk/nextjs';
 
@@ -35,23 +35,6 @@ export async function GET() {
   // Fetch data from Supabase and return it.
   const data = { supabaseData: 'Hello World' };
   return NextResponse.json({ data });
-}
-```
-
-When a user is authenticated, client components can fetch from protected API routes like this:
-
-```
-'use client';
-export default function ClientComponent() {
-  const [data, setData] = useState('');
-  useEffect(() => {
-    fetch("/api/example")
-    .then(response => response.json())
-          .then(d => {
-            setData(d.supabaseData)
-          })
-  }, []);
-  // Display data
 }
 ```
 
