--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -1,6 +1,6 @@
 ---
 title: useAuth()
-description: The useAuth() hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
+description: The useAuth hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 ---
 
 # `useAuth()`
@@ -9,7 +9,8 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 
 ## Usage
 
-<CodeBlockTabs options={["Next.js", "React"]}>
+### Next.js
+<CodeBlockTabs options={["Page Router", "App Router"]}>
   ```tsx filename="pages/index.tsx"
   import { useAuth } from '@clerk/nextjs';
 
@@ -32,6 +33,40 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 
   ```
 
+  ```tsx filename="/app/pageWithData/clientComponent.tsx"
+  "use client";
+  import { useAuth } from '@clerk/nextjs';
+
+  export default function ExternalDataPage() {
+    const [data, setData] = useState<object>({});
+    const { getToken, isLoaded, isSignedIn } = useAuth();
+
+    // Fetch data from a Next.js API route handler
+    useEffect(() => {
+      if (!isLoaded || !isSignedIn) {
+        // You can handle the loading or signed state separately
+        return;
+      }
+
+      // Fetch data without async/await since this is a client component
+      getToken()
+      .then((token) =>
+      fetch('/api/protectedNextRoute', {
+        headers: {Authentication: `Bearer ${token}`}
+      }))
+      .then(response => response.json())
+            .then(data => {
+              setData(data.data)
+            });
+    }, []);
+
+    return <div>...</div>;
+  }
+  ```
+</CodeBlockTabs>
+
+### React
+<CodeBlockTabs>
   ```tsx filename="external-data-page.tsx"
   import { useAuth } from '@clerk/clerk-react';
 
@@ -55,16 +90,45 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
   ```
 </CodeBlockTabs>
 
-## Returns
-
-| Variables | Description |
-| --- | --- |
-| `isSignedIn` | A boolean that returns true if the user is signed in. |
-| `isLoaded` | A boolean that until Clerk loads and initializes, will be set to `false`. Once Clerk loads, `isLoaded` will be set to `true`. |
-| `userId` | The current user's ID. |
-| `sessionId` | The current user's session ID. |
-| `signOut` | A function that signs the user out. |
-| `getToken` | A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template. |
-| `orgId` | The current user's organization ID. |
-| `orgRole` | The current user's organization role. |
-| `orgSlug` | The current user's organization slug. |
+<Tables
+  headings={["Variables", "Description"]}
+  headingsMeta={[{}, {maxWidth:'300px'}]}
+  rows={[
+    {
+      cells: [
+        "isSignedIn",
+        "A boolean that returns true if the user is signed in.",
+      ],
+    },
+    {
+      cells: [
+        "isLoaded",
+        "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true",
+      ],
+    },
+    {
+      cells: ["userId", "The current user's ID"],
+    },
+    {
+      cells: ["sessionId", "The current user's session ID"],
+    },
+    {
+      cells: ["signOut", "A function that signs the user out"],
+    },
+    {
+      cells: [
+        "getToken",
+        "A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template.",
+      ],
+    },
+    {
+      cells: ["orgId", "The current user's organization ID"],
+    },
+    {
+      cells: ["orgRole", "The current user's organization role"],
+    },
+    {
+      cells: ["orgSlug", "The current user's organization slug"],
+    },
+  ]}
+/>
