--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -270,7 +270,8 @@ export default function Example() {
 
 #### App Router
 
-[`auth()`][auth-ref] and [`currentUser()`][currentuser-ref] are new helpers that you can use inside of your Route Handlers, middleware, Server Components, and Server Actions.
+[`auth()`][auth-ref] and [`currentUser()`][currentuser-ref] are App Router-specific helpers that you can use inside of your Route Handlers, middleware, Server Components, and Server Actions.
+
 
 The [`auth()`][auth-ref] helper will return the [`Authentication`](/docs/references/nextjs/authentication-object) object of the currently active user. Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
 
