--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -289,7 +289,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
     import { NextResponse } from 'next/server';
     import { auth } from '@clerk/nextjs';
 
-    export async function GET(req: Request, res: NextResponse) {
+    export async function GET() {
+
       const { userId } = auth();
 
       if (!userId) {
