--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -312,7 +312,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
     import { NextResponse } from 'next/server';
     import { currentUser, auth } from "@clerk/nextjs";
 
-    export async function GET(req: Request, res: NextResponse) {
+    export async function GET() {
+
       const { userId } = auth();
 
       if (!userId) {
