--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -386,7 +386,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
     You can access the active session and user data in your `getServerSideProps` using the [`getAuth`](/docs/references/nextjs/get-auth) helper.
 
     <Callout type="info" emoji="ℹ️">
-      Please note the addition of `buildClerkProps` in the return statement, which informs our React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
+      Please note the addition of `buildClerkProps` in the return statement, which informs the Clerk React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
+
     </Callout>
 
     ```tsx filename="pages/example.tsx"
