move and update images; clean up copy

--- a/docs/backend-requests/testing/postman-or-insomnia.mdx
+++ b/docs/backend-requests/testing/postman-or-insomnia.mdx
@@ -5,27 +5,33 @@ description: Learn about generating and using a long lived JWT Token with Postma
 
 # Testing with Postman and Insomnia
 
-Basic testing with Postman and Insomnia is very similar. This will get you started with either option.
+Postman and Insomnia are powerful tools used to test API's, validate their behavior, and automate testing tasks. Basic testing with these tools is similar, and this guide will help you get started with either option.
 
 ## Generate Long Lived JWT Template
 
-The standard token issued by Clerk expires after 60 seconds. The SDKs handle refreshing the token regularly so the auth state is up to date. When testing with Postman or Insomnia, this token isn't very useful as it will expire quickly.
+The standard token issued by Clerk expires after 60 seconds. Clerk SDKs handle refreshing the token regularly so that the authentication state is kept up to date. Because this token expires quickly, it isn't very useful when trying to test with Postman or Insomnia.
 
-You will want to create a long lived [JWT Template](/docs/backend-requests/making/jwt-templates), which we can place into Postman/Insomnia and not have to constantly update. To do that, go to the [Clerk Dashboard](https://dashboard.clerk.com/), select the Application and the instance we want to test from the header. After that, select the left Nav item called [JWT Templates](https://dashboard.clerk.com/last-active?path=/jwt-templates). 
-
-Give your template a unique name, such as '*postman-template*'. Set the 'Token Lifetime' to a value that suits your needs, or use the maximum of 315360000 seconds or 10 years. If your normal token has Claims, then you can add the same Claims to your JWT Template.
-
+You will want to create a long lived [JWT Template](/docs/backend-requests/making/jwt-templates) to be used in Postman or Insomnia. To do so, navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) page in the Clerk Dashboard. Click on the **New template** button and select the **Blank** template.
 
 <Images
-src="/docs/images/backend-requests/testing/create-jwt-template.png"
-width={1220}
-height={1055}
-alt="Create a JWT Template in the Clerk Dashboard"
+  src="/docs/images/testing/blank-jwt-template.webp"
+  width={3024}
+  height={1654}
+  alt="The JWT Template page in the Clerk Dashboard. The 'New template' button was clicked, in the modal that opened, the 'Blank' template is hovered over."
+/>
+
+Give your template a unique name, such as *'testing-template'*. Set the **Token Lifetime** to a value that suits your needs, or use the maximum of 315360000 seconds (10 years). If your normal token has Claims, then you can add the same Claims to your JWT Template.
+
+<Images
+  src="/docs/images/testing/testing-template.webp"
+  width={2492}
+  height={1400}
+  alt="Creating a JWT Template in the Clerk Dashboard"
 />
 
 ## Fetch Long Lived Token
 
-Visit your Frontend that is using the same Clerk Application and instance you want to test and login as a user. The user you log in as will be the user you test with in Postman or Insomnia. You can create several tokens for several different users. Once you have logged into, open your Dev Tools (usually F12) and go to the console tab. Enter the following command:
+Visit your frontend that is using the same Clerk Application and instance that you want to test. Log in as a user. The user that you log in as will be the user you test with in Postman or Insomnia. You can create several tokens for several different users. Once you have logged in, open your Dev Tools and go to the **Console** tab. Enter the following command:
 
 ```
 await window.Clerk.session.getToken()
