migrate table components to markdown tables

--- a/docs/references/javascript/types/deleted-object.mdx
+++ b/docs/references/javascript/types/deleted-object.mdx
@@ -9,14 +9,9 @@ The `DeletedObject` class represents an item that has been deleted from the data
 
 ## Properties
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>object</code>, <code>string</code>, <>The object type type that has been deleted.</>]},
-{cells: [<code>id</code>, <code>string | undefined</code>, <>The ID of the deleted item.</>]},
-{cells: [<code>slug</code>, <code>string | undefined</code>, <>The slug of the deleted item.</>]},
-{cells: [<code>deleted</code>, <code>boolean</code>, <>A boolean checking if the item has been deleted or not.</>]}
-  ]}
-  />
+| Name | Type | Description |
+| --- | --- | --- |
+| `object` | `string` | The object type that has been deleted. |
+| `id` | `string \| null` | The ID of the deleted item. |
+| `slug` | `string \| null` | The slug of the deleted item. |
+| `deleted` | `boolean` | A boolean checking if the item has been deleted or not. |
