--- a/docs/references/javascript/types/oauth-strategy.mdx
+++ b/docs/references/javascript/types/oauth-strategy.mdx
@@ -23,65 +23,19 @@ type OAuthStrategy = |
 "oauth_notion";
 ```
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[{cells: [
-        <code>oauth_facebook</code>,
-        <code>string</code>,
-        <>Specify Facebook as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_github</code>,
-        <code>string</code>,
-        <>Specify GitHub as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_google</code>,
-        <code>string</code>,
-        <>Specify Google as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_hubspot</code>,
-        <code>string</code>,
-        <>Specify HubSpot as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_tiktok</code>,
-        <code>string</code>,
-        <>Specify TikTok as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_gitlab</code>,
-        <code>string</code>,
-        <>Specify GitLab as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_discord</code>,
-        <code>string</code>,
-        <>Specify Discord as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_twitter</code>,
-        <code>string</code>,
-        <>Specify Twitter as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_twitch</code>,
-        <code>string</code>,
-        <>Specify Twitch as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_linkedin</code>,
-        <code>string</code>,
-        <>Specify LinkedIn as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_dropbox</code>,
-        <code>string</code>,
-        <>Specify Dropbox as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_bitbucket</code>,
-        <code>string</code>,
-        <>Specify Bitbucket as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_microsoft</code>,
-        <code>string</code>,
-        <>Specify Microsoft as the verification OAuth provider.</>
-    ]},
-    {cells: [
-        <code>oauth_notion</code>,
-        <code>string</code>,
-        <>Specify Notion as the verification OAuth provider.</>
-    ]}]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `oauth_facebook` | `string` | Specify Facebook as the verification OAuth provider. |
+| `oauth_github` | `string` | Specify GitHub as the verification OAuth provider. |
+| `oauth_google` | `string` | Specify Google as the verification OAuth provider. |
+| `oauth_hubspot` | `string` | Specify HubSpot as the verification OAuth provider. |
+| `oauth_tiktok` | `string` | Specify TikTok as the verification OAuth provider. |
+| `oauth_gitlab` | `string` | Specify GitLab as the verification OAuth provider. |
+| `oauth_discord` | `string` | Specify Discord as the verification OAuth provider. |
+| `oauth_twitter` | `string` | Specify Twitter as the verification OAuth provider. |
+| `oauth_twitch` | `string` | Specify Twitch as the verification OAuth provider. |
+| `oauth_linkedin` | `string` | Specify LinkedIn as the verification OAuth provider. |
+| `oauth_dropbox` | `string` | Specify Dropbox as the verification OAuth provider. |
+| `oauth_bitbucket` | `string` | Specify Bitbucket as the verification OAuth provider. |
+| `oauth_microsoft` | `string` | Specify Microsoft as the verification OAuth provider. |
+| `oauth_notion` | `string` | Specify Notion as the verification OAuth provider. |
