--- a/docs/references/javascript/types/public-user-data.mdx
+++ b/docs/references/javascript/types/public-user-data.mdx
@@ -9,39 +9,11 @@ Information about the user that's publicly available.
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [
-        <code>firstName</code>,
-        <code>string | null</code>,
-        "The user's first name."
-        ]},
-    {cells: [
-        <code>lastName</code>,
-        <code>string | null</code>,
-        "The user's last name."
-        ]},
-    {cells: [
-        <code>profileImageUrl</code>,
-        <code>string</code>,
-        "The URL for the user's profile image. (deprecated)"
-        ]},
-    {cells: [
-        <code>imageUrl</code>,
-        <code>string</code>,
-        "Holds the default avatar or users uploaded profile image"
-        ]},
-    {cells: [
-        <code>identifier</code>,
-        <code>string</code>,
-        "The user's identifier."
-        ]},
-    {cells: [
-        <code>userId</code>,
-        <code>string | undefined</code>,
-        "The user's ID."
-        ]},
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `firstName` | `string \| null` | The user's first name. |
+| `lastName` | `string \| null` | The user's last name. |
+| `imageUrl` | `string` | Holds the default avatar or users uploaded profile image. |
+| `hasImage` | `boolean` | Indicates if the user has uploaded a profile image. |
+| `identifier` | `string` | The user's identifier. |
+| `userId?` | `string \| null` | The user's ID. |
