--- a/docs/references/javascript/types/redirect-options.mdx
+++ b/docs/references/javascript/types/redirect-options.mdx
@@ -11,6 +11,6 @@ An interface that provides options for a range of redirect methods.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `afterSignInUrl` | `string \| null \| undefined` | Full URL or path to navigate to after successful sign-in. |
-| `afterSignUpUrl` | `string \| null \| undefined` | Full URL or path to navigate to after successful sign-up. Sets the `afterSignUpUrl` if the "Sign up" link is clicked. |
-| `redirectUrl` | `string \| null \| undefined` | Full URL or path to navigate to after successful sign-in, or sign-up. The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl?` | `string \| null \| undefined` | Full URL or path to navigate to after successful sign-in. |
+| `afterSignUpUrl?` | `string \| null \| undefined` | Full URL or path to navigate to after successful sign-up. Sets the `afterSignUpUrl` if the "Sign up" link is clicked. |
+| `redirectUrl?` | `string \| null \| undefined` | Full URL or path to navigate to after successful sign-in, or sign-up. The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
