clean up cypress testing page; clean up custom session token page

--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -19,7 +19,8 @@ They typically contain a standard set of claims that are required for Clerk to f
 
 ### Go to **Sessions** in the Clerk Dashboard
 
-Firstly you need to go to the Sessions tab in the Clerk Dashboard.
+Navigate to the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) page in the Clerk Dashboard.
+
 <Images
 src="/docs/images/advance/session-tokens/clerk-session.png"
 width={3024}
@@ -29,7 +30,7 @@ alt="Clerk Dashboard with a session token"
 
 ### Click the **Edit** button
 
-Next from the menu select the Edit button.
+In the section titled **Customize your session token**, click on the **Edit** button.
 
 <Images
 src="/docs/images/advance/session-tokens/clerk-session-edit.png"
@@ -40,7 +41,7 @@ alt="Clerk Dashboard with an arrow pointing to the edit"
 
 ### Add a new claim to the session token
 
-At this point, you are able to select all the session tokens you need. This examples adds a new claim called `fullName` and `primaryEmail` to the session token.
+In the modal that opens, you can add any claim to your session token that you need. This examples adds a new claim called `fullName` and `primaryEmail` to the session token.
 
 <Images
 src="/docs/images/advance/session-tokens/custom-session-example.png"
@@ -51,14 +52,31 @@ alt="Clerk Dashboard showing the custom claim modal"
 
 ### Using the custom claims in your application
 
-Now that you have added the custom claims to your session token, you can use them in your application. Below is an example of how you can access the custom claims in your application.
+Now that you have added the custom claims to your session token, you can use them in your application. Below is an example of how you can use the [`getAuth`](/docs/references/nextjs/get-auth) helper to access the custom claims in your application.
 
 #### Using `getAuth` in your Next.js application
 
-```tsx fileName=pages/api/example.ts
-import { getAuth } from "@clerk/nextjs/server";
+<CodeBlockTabs options={["App Router", "Pages Router"]}>
+```tsx filename="app/page.[jsx/tsx]"
+import { auth } from '@clerk/nextjs';
+import { NextResponse } from 'next/server';
+ 
+export default function Page() {
+  const { sessionClaims } = auth();
 
-export default async function handler(req, res) {
+  const firstName = sessionClaims?.fullName;
+
+  const primaryEmail = sessionClaims?.primaryEmail;
+
+  return NextResponse.json({ firstName, primaryEmail })
+}
+```
+
+```tsx filename="pages/api/example.[ts/js]"
+import { getAuth } from "@clerk/nextjs/server";
+import type { NextApiRequest, NextApiResponse } from 'next';
+
+export default async function handler(req: NextApiRequest, res: NextApiResponse) {
   const { sessionClaims } = getAuth(req);
 
   const firstName = sessionClaims.fullName;
@@ -68,5 +86,6 @@ export default async function handler(req, res) {
   return res.status(200).json({ firstName, primaryEmail })
 }
 ```
+</CodeBlockTabs>
 
 </Steps>
