--- a/docs/testing/cypress.mdx
+++ b/docs/testing/cypress.mdx
@@ -5,21 +5,21 @@ description: Use Cypress to write end-to-end tests with Clerk.
 
 # Testing with Cypress
 
-Cypress is a Javascript End to End Testing framework that is popular, easy to use, and very powerful. This document will go over the setup you need to write authenticated tests with Clerk. This guide will assume you're somewhat familiar with Clerk and Cypress.
+Cypress is a well-established JavaScript End-to-End Testing framework known for its simplicity and powerful features. This guide aims to help you set up your environment for creating authenticated tests with Clerk. This guide will assume you're somewhat familiar with Clerk and Cypress.
 
 If you would like to see a full example of a Cypress project with Clerk, check out [this repo](https://github.com/clerkinc/example-cypress-nextjs).
 
 <Callout type="info">
-  Since Cypress does not allow third-party cookies by default, you might be interested in the experimental Cookieless Dev mode.
+  Since Cypress does not allow third-party cookies by default, you might be interested in the experimental [Cookieless Dev](/docs/upgrade-guides/url-based-session-syncing) mode.
 </Callout>
 
 ## Cypress commands
 
-Easiest way to test with Clerk is to create sign in and sign out helper thats you can re-use in all of your tests.
+The easiest way to test with Clerk is to create sign-in and sign-out helpers that you can re-use in all of your tests.
 
-### Sign out helper
+### Sign-out helper
 
-This helper is simple, and just clears all cookies, which effectively puts the browser back into a "signed out" state
+The sign-out helper clears all cookies, which effectively puts the browser back into a "signed out" state.
 
 ```js filename="commands.js"
 Cypress.Commands.add(`signOut`, () => {
@@ -28,14 +28,14 @@ Cypress.Commands.add(`signOut`, () => {
 });
 ```
 
-### Sign in helper
+### Sign-in helper
 
-This helper is dependent on your authentication strategy, and just signs in an existing user. The following helper uses an email/pw strategy to sign in the user. If you're using phone codes, you should use [Test emails and phones](/docs/testing/test-emails-and-phones).
+The sign-in helper signs in an existing user depending on the authentication strategy. The following helper uses an email/password strategy to sign in the user. If you're using one-time passcodes (OTPs), visit the [guide on testing OTPs](/docs/testing/test-emails-and-phones).
 
-The helper will read from the [Cypress environment variables](https://docs.cypress.io/guides/guides/environment-variables). To define the email and password, a `cypress.env.json` can be created.
+The sign-in helper will read from the [Cypress environment variables](https://docs.cypress.io/guides/guides/environment-variables). To define the email and password, create a `cypress.env.json` file.
 
 <Callout type="info">
-  Be careful not to call this method once per test. You will get rate-limited. Instead, sign in once, then re-use the same session for multiple tests. See below for an example.
+  Be careful not to call this method once per test. You will get rate-limited. Instead, sign in once and then re-use the same session for multiple tests. See below for an example.
 </Callout>
 
 ```js filename="commands.js"
@@ -73,7 +73,9 @@ Cypress.Commands.add(`signIn`, () => {
 
 ## Simple tests
 
-Now that some simple commands have been created, let's see how to write some basic tests. 
+Now that some simple commands have been created, here are some examples on how to write some simple tests.
+
+This example will be testing a simple dashboard page that displays different content depending on whether the user is signed in or not.
 
 ```jsx
 import { SignedIn, SignedOut } from "@clerk/nextjs";
@@ -108,7 +110,7 @@ describe("Signed out", () => {
 
 ### Test signed in
 
-Note the use of `before` and `beforeEach`. You want to be careful about signing in too many times quickly as you might get rate limited. So, you should only sign in once for all your tests inside of `before`. Then, since Cypress will clear cookies by default after tests, you need to use `beforeEach` to maintain these cookies and keep the browser in the `signedIn` state.
+Note the use of `before` and `beforeEach`. You want to be careful about signing in too many times quickly as you might get rate limited. You should only sign in once for all of your tests inside of `before`. Then, since Cypress will clear cookies by default after tests, you need to use `beforeEach` to maintain these cookies and keep the browser in the `signedIn` state.
 
 ```js filename="app.cy.js"
 describe("Signed in", () => {
@@ -130,7 +132,7 @@ describe("Signed in", () => {
 
 ## SSR tests
 
-You need to make some slight modifications to test in an SSR context. Because Clerk uses short-lived JWTs, it uses middleware that will re-load the JWT from a different page if necessary. This page might return a 401, so Cypress needs to be told to ignore the 401 and continue. Passing `failOnStatusCode: false` into `cy.visit` accomplishes just that.
+You need to make some slight modifications to test in an SSR context. Because Clerk uses short-lived JWTs, middleware is used to re-load the JWT from a different page if necessary. This page might return a 401, so Cypress needs to be told to ignore the 401 and continue. This is done by passing `failOnStatusCode: false` to the `cy.visit` command.
 
 Here's a simple SSR page, where the auth check is done on the server side, and returned to the frontend.
 
@@ -161,7 +163,7 @@ export default function Page({ signedIn, sessionToken, sessionId }) {
 }
 ```
 
-### Test signed out
+### Test signed out (SSR)
 
 ```js filename="app.cy.js"
 describe("Signed out", () => {
@@ -177,7 +179,7 @@ describe("Signed out", () => {
 })
 ```
 
-### Test signed in
+### Test signed in (SSR)
 
 Note the use of `before` and `beforeEach`. You want to be careful about signing in too many times quickly as you might get rate limited. So, you should only sign in once for all your tests inside of `before`. Then, since Cypress will clear cookies by default after tests, you need to use `beforeEach` to maintain these cookies and keep the browser in the `signedIn` state.
 
