migrate table components to markdown tables

--- a/docs/organizations/metadata.mdx
+++ b/docs/organizations/metadata.mdx
@@ -7,25 +7,10 @@ description: Organization objects hold a set of metadata that can be used intern
 
 Metadata allows for custom data to be saved on the `Organization` and `Organization Membership` objects. There are two types of metadata: **public** and **private**. Choosing which metadata field you should use for setting custom attributes on your organizations becomes a matter of access and visibility.
 
-<Tables
-  headings={["Metadata", "Frontend API", "Backend API"]}
-  rows={[
-    {
-    cells: [
-      <>private</>, 
-      <>-</>,
-      <>Read/Write</>
-    ],
-    },
-    {
-      cells: [
-        <>public</>,
-        <>Read</>,
-        <>Read/Write</>,
-      ],
-    },
-  ]}
-/>
+| Metadata | Frontend API | Backend API |
+| --- | --- | --- |
+| private | - | Read and write |
+| public | Read | Read and write |
 
 <Callout type="warning">
     Metadata is limited to **8kb** maximum.
