--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -112,149 +112,25 @@ If you define an `afterAuth` function, it will run even if the request correspon
 
 ## Options
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>afterAuth?</code>,
-        <code>function</code>,
-        `Called after the authentication middleware is executed. This function has access to the auth object and can be used to execute logic based on the auth state.`
-      ],
-    },
-    {
-      cells: [
-        <code>apiRoutes?</code>,
-        <code>string[]</code>,
-        <>A list of routes that should return 401. You can use glob patterns to match multiple routes or a function to match against the request object. For example: <code>['/foo', '/bar(.*)']</code> or <code>[/^\/foo\/.*$/]</code></>
-      ],
-    },
-    {
-      cells: [
-        <code>audience?</code>,
-        <code>string | string[]</code>,
-        `A string or list of audiences.`
-      ],
-    },
-    {
-      cells: [
-        <code>authorizedParties?</code>,
-        <code>string[]</code>,
-        `An allowlist of origins to verify against, to protect your application from the subdomain cookie leaking attack.`
-      ],
-    },
-    {
-      cells: [
-        <code>beforeAuth?</code>,
-        <code>function</code>,
-       `A function called before the authentication middleware is executed. If a redirect response is returned, the middleware will respect it and redirect the user. If false is returned, the auth middleware will not execute and the request will be handled as if the auth middleware was not present.`
-      ],
-    },
-    {
-      cells: [
-        <code>clockSkewInSeconds?</code>,
-        <code>number</code>,
-       `Overrides the default allowed clock skew.`
-      ],
-    },
-    {
-      cells: [
-        <code>debug?</code>,
-        <code>boolean</code>,
-       `Enables debugging mode in the Clerk middleware handler. Logs out additional debugging information.`
-      ],
-    },
-    {
-      cells: [
-        <code>domain?</code>,
-        <code>string</code>,
-       `The domain used for satellites to inform Clerk where this application is deployed.`
-      ],
-    },
-    {
-      cells: [
-        <code>ignoredRoutes?</code>,
-        <code>string[]</code>,
-       `A list of routes that should be ignored by the middleware. This list typically includes routes for static files or Next.js internals. For improved performance, these routes should be skipped using the default config.matcher instead.`
-      ],
-    },
-    {
-      cells: [
-        <code>isSatellite?</code>,
-        <code>boolean</code>,
-       `When using Clerk's satellite feature, this should be enabled for secondary domains.`
-      ],
-    },
-    {
-      cells: [
-        <code>jwksCacheTtlInMs?</code>,
-        <code>number</code>,
-       `Set the JWKs cache TTL, in milliseconds.`
-      ],
-    },
-    {
-      cells: [
-        <code>jwtKey?</code>,
-        <code>string</code>,
-       `An alternate JWT key to use at runtime.`
-      ],
-    },
-    {
-      cells: [
-        <code>proxyUrl?</code>,
-        <code>string</code>,
-       `If using a proxy, specify the URL of the proxy.`
-      ],
-    },
-    {
-      cells: [
-        <code>publicRoutes?</code>,
-        <code>string[]</code>,
-       <>A list of routes that should be accessible without authentication. You can use glob patterns to match multiple routes or a function to match against the request object. For example: <code>['/foo', '/bar(.*)']</code> or <code>[/^\/foo\/.*$/]</code>.<br />The sign in and sign up URLs are included by default, unless a function is provided.</>
-      ],
-    },
-    {
-      cells: [
-        <code>publishableKey?</code>,
-        <code>string</code>,
-       `An alternate Clerk publishable key.`
-      ],
-    },
-    {
-      cells: [
-        <code>secretKey?</code>,
-        <code>string</code>,
-       `An alternate Clerk secret key.`
-      ],
-    },
-    {
-      cells: [
-        <code>signInUrl?</code>,
-        <code>string</code>,
-       `An alternative sign in URL.`
-      ],
-    },
-    {
-      cells: [
-        <code>skipJwksCache?</code>,
-        <code>boolean</code>,
-       `Disables use of the JWKs cache.`
-      ],
-    },
-    {
-      cells: [
-        <code>apiKey?</code>,
-        <code>string</code>,
-       `An alternate Clerk API key.`
-      ],
-    },
-    {
-      cells: [
-        <code>frontendApi?</code>,
-        <code>string</code>,
-       `An alternate Clerk frontend API URL.`
-      ],
-    },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterAuth?` | `function` | Called after the authentication middleware is executed. This function has access to the [`Authentication`](/docs/references/nextjs/authentication-object) object and can be used to execute logic based on the auth state. |
+| `apiRoutes?` | `string[]` | A list of routes that should return 401. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or [/^\/foo\/.*$/] |
+| `audience?` | `string | string[]` | A string or list of audiences. |
+| `authorizedParties?` | `string[]` | An allowlist of origins to verify against, to protect your application from the subdomain cookie leaking attack.<br/>For example:<br/>`['http://localhost:3000', 'https://example.com']`<br/>For more information, refer to the [reference guide](/docs/references/nodejs/token-verification#validate-the-authorized-party-of-a-session-token). |
+| `beforeAuth?` | `function` | A function called before the authentication middleware is executed. If a redirect response is returned, the middleware will respect it and redirect the user. If `false` is returned, the auth middleware will not execute and the request will be handled as if the auth middleware was not present. |
+| `clockSkewInSeconds?` | `number` | Overrides the default allowed clock skew. |
+| `debug?` | `boolean` | Enables debugging mode in the Clerk middleware handler. Logs out additional debugging information. |
+| `domain?` | `string` | The domain used for satellites to inform Clerk where this application is deployed. |
+| `isSatellite?` | `boolean` | When using Clerk's satellite feature, this should be enabled for secondary domains. |
+| `proxyUrl?` | `string` | If using a proxy, specify the URL of the proxy. |
+| `jwksCacheTtlInMs?` | `number` | Set the JWKs cache TTL, in milliseconds. |
+| `jwtKey?` | `string` | An optional [custom JWT key](/docs/references/nodejs/token-verification#networkless-token-verification-using-the-jwt-verification-key) to use for session token validation. |
+| `ignoredRoutes?` | `string[]` | A list of routes that should be ignored by the middleware. This list typically includes routes for static files or Next.js internals. For improved performance, these routes should be skipped using the default config.matcher instead. |
+| `publicRoutes?` | `string[]` | A list of routes that should be accessible without authentication. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or [/^\/foo\/.*$/]<br/>The sign in and sign up URLs are included by default, unless a function is provided. |
+| `publishableKey` | `string` | An alternate Clerk publishable key. |
+| `secretKey?` | `string` | An alternate Clerk secret key. |
+| `signInUrl?` | `string` | An alternative sign in URL. |
+| `skipJwksCache?` | `boolean` | Disables use of the JWKs cache. |
+| `apiKey?` | `string` | An alternate Clerk API key. |
+| `frontendApi?` | `string` | An alternate Clerk frontend API URL. |
