--- a/docs/references/remix/clerk-catch-boundary.mdx
+++ b/docs/references/remix/clerk-catch-boundary.mdx
@@ -3,8 +3,6 @@ title: ClerkCatchBoundary()
 description: Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens, Clerk uses Remix's catch boundary feature.
 ---
 
-import { Tables } from "@/components/Table";
-
 # `ClerkCatchBoundary()`
 
 Clerk uses short-lived tokens to keep your application secure. To refresh expired tokens Clerk [uses Remix's catch boundary feature](https://remix.run/docs/en/main/route/catch-boundary).
@@ -67,17 +65,6 @@ export const CatchBoundary = ClerkCatchBoundary(YourBoundary);
 
 ## Props
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>RootCatchBoundary?</code>,
-        <code>React.ComponentType</code>,
-        `A optional component used as your application boundary.`,
-      ],
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `RootCatchBoundary?` | `React.ComponentType` | An optional component used as your application boundary. |
