--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -7,14 +7,11 @@ description: Metadata allows for custom data to be saved on the User object.
 
 Metadata allows for custom data to be saved on the [`User` object](/docs/users/overview#user-object). There are three types of metadata: "unsafe", "public", and "private".
 
-<Tables
-  headings={["Metadata", "Frontend API", "Backend API"]}
-  rows={[
-    {cells: [<>Private</>, <>No read or write access</>, <>Read & write access</>]},
-    {cells: [<>Public</>, <>Read access</>, <>Read & write access</>]},
-    {cells: [<>Unsafe</>, <>Read & write access</>, <>Read & write access</>]}
-  ]}
-/>
+| Metadata | Frontend API | Backend API |
+| --- | --- | --- |
+| Private | No read or write access | Read & write access |
+| Public | Read access | Read & write access |
+| Unsafe | Read & write access | Read & write access |
 
 ## Private metadata
 
