--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -93,14 +93,13 @@ ReactDOM.render(
 
 | Name                      | Type                                                                                  | Description                                                                                                                                                                                                                |
 | ------------------------- | ------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `publishableKey`          | `string`                                                                              | The publishable key from your Clerk Dashboard, used to connect to Clerk.                                                                                                                                                   |
-| `frontendApi`             | `string`                                                                              | The frontend API host for your instance. This can be found in your Clerk Dashboard.                                                                                                                                        |
+| `publishableKey`          | `string`                                                                              | Clerk publishable key for your instance. This can be found in your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).                                                                                                                                                   |
+| `frontendApi`             | `string`                                                                              | The frontend API host for your instance. This can be found in your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys) under the **Advanced** section.                                                                                                                                        |
 | `navigate?`               | `(to: string) => Promise<unknown> \| void`                                            | A function which takes the destination path as an argument and performs a "push" navigation.                                                                                                                               |
 | `clerkJSUrl?`             | `string`                                                                              | Define the URL that `@clerk/clerk-react` should hot-load `@clerk/clerk-js` from.                                                                                                                                           |
 | `clerkJSVariant?`         | `string`                                                                              | If your web application only uses Control components, you can set this value to `headless` and load a minimal ClerkJS bundle for optimal page performance.                                                                 |
 | `clerkJSVersion?`         | `string`                                                                              | Define the npm version for `@clerk/clerk-js`.                                                                                                                                                                              |
 | `supportEmail?`           | `string`                                                                              | Optional support email for display in authentication screens. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                  |
-| `localization?`           | `object`                                                                              | Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                               |
 | `appearance?`             | <code>[Appearance](/docs/components/customization/overview) \| undefined</code>       | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                                      |
 | `localization`            | <code>[Localization](/docs/components/customization/localization) \| undefined</code> | Optional object to localize your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages.                                                                                   |
 | `allowedRedirectOrigins?` | `Array<string \| RegExp>`                                                             | Optional array of domains used to validate against the query param of an auth redirect. If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
