--- a/docs/references/gatsby/with-server-auth.mdx
+++ b/docs/references/gatsby/with-server-auth.mdx
@@ -3,9 +3,6 @@ title: withServerAuth()
 description: The withServerAuth() function facilitates server-side authentication and provides options for data retrieval and authorization control for Clerk Components in a Gatsby application.
 ---
 
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-
 # `withServerAuth()`
 
 ## Usage
@@ -49,83 +46,30 @@ Gatsby then automatically passes the result of `withServer`'s callback to the `s
 
 ### Callback props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>auth</code>,
-        // TODO: Add link to reference page for this property when it exists
-        <code>ServerSideAuth</code>,
-        <>Current auth data, including <code>sessionId</code> and <code>userId</code>.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>session</code>,
-        <a href="/docs/references/javascript/session"><code>Session</code></a>,
-        <>The current session.<br/><br/>Requires <code>loadSession</code> to be set to <code>true</code> in options.</>
-      ],
-    },
-    {
-      cells: [
-        <code>user</code>,
-        <a href="/docs/references/javascript/user/user"><code>User</code></a>,
-        <>The current user.<br/><br/>Requires <code>loadUser</code> to be set to <code>true</code> in options.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>organization</code>,
-        <a href="/docs/references/javascript/organization/organization"><code>Organization</code></a>,
-        <>The current organization.<br/><br/>Requires <code>loadOrg</code> to be set to <code>true</code> in options.</>,
-      ],
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `auth` | [`ServerSideAuth`](#server-side-auth) | The authentication data for the active user and their current session. |
+| `session` | [`Session`](#session) | The current session. |
+| `user` | [`User`](#user) | The current user. |
+| `organization` | [`Organization`](#organization) | The current organization. |
+
+#### `ServerSideAuth`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `sessionId` | `string \| null` | The ID of the current session. |
+| `userId` | `string \| null` | The ID of the current user. |
+| `actor` | `ActJWTClaim \| null` | The JWT actor for the session. |
+| `getToken` | `() => Promise<string \| null>` | A function that returns a promise that resolves to the current user's session token; can also be used to retrieve a custom JWT template |
+| `claims` | [`ClerkJWTClaims`](/docs/backend-requests/resources/session-tokens#default-session-claims) \| `null` | The JWT claims for the session. |
 
 
 ### Options
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>loadUser?</code>,
-        <code>boolean</code>,
-        <>If <code>true</code>, load the user data for the current auth session.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>loadSession?</code>,
-        <code>boolean</code>,
-        <>If <code>true</code>, load the session data for the current auth session.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>loadOrg?</code>,
-        <code>boolean</code>,
-        <>If <code>true</code>, load the organization data for the current auth session.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>jwtKey?</code>,
-        <code>string</code>,
-        <>An optional custom JWT key to use for session token validation.<br/><br/><a href="/docs/references/nodejs/token-verification#networkless-token-verification-using-the-jwt-verification-key">Read more about <code>jwtKey</code> with our docs page.</a></>,
-      ],
-    },
-    {
-      cells: [
-        <code>authorizedParties?</code>,
-        <code>string[]</code>,
-        <>An optional list of domains allowed to request JWT authorization.<br/><br/><a href="/docs/references/nodejs/token-verification#validate-the-authorized-party-of-a-session-token">Read more about <code>authorizedParties</code> with our docs page.</a></>,
-      ],
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `loadUser?` | `boolean` | If `true`, load the user data for the current auth session. |
+| `loadSession?` | `boolean` | If `true`, load the session data for the current auth session. |
+| `loadOrg?` | `boolean` | If `true`, load the organization data for the current auth session. |
+| `jwtKey?` | `string` | An optional [custom JWT key](/docs/references/nodejs/token-verification#networkless-token-verification-using-the-jwt-verification-key) to use for session token validation. |
+| `authorizedParties?` | `string[]` | An allowlist of origins to verify against, to protect your application from the subdomain cookie leaking attack.<br/>For example:<br/>`['http://localhost:3000', 'https://example.com']`<br/>For more information, refer to the [reference guide](/docs/references/nodejs/token-verification#validate-the-authorized-party-of-a-session-token). |
