--- a/docs/references/remix/clerk-app.mdx
+++ b/docs/references/remix/clerk-app.mdx
@@ -3,8 +3,6 @@ title: ClerkApp
 description: Clerk provides a ClerkApp wrapper to provide the authentication state to your React tree. This helper works with Remix SSR out-of-the-box and follows the "higher-order component" paradigm.
 ---
 
-import { Tables } from "@/components/Table";
-
 # `ClerkApp`
 
 Clerk provides a `ClerkApp` wrapper to provide the authentication state to your React tree. This helper works with Remix SSR out-of-the-box and follows the "higher-order component" paradigm.
@@ -59,52 +57,14 @@ export default ClerkApp(App);
 
 `<ClerkApp>` supports [all of the same properties as `<ClerkProvider>`](/docs/components/clerk-provider#props) with the exception of the `navigate` property:
 
+| Name | Type | Description |
+| --- | --- | --- |
+| `publishableKey` | `string` | Clerk publishable key for your instance. This can be found in your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys). |
+| `frontendApi` | `string` | The frontend API host for your instance. This can be found in your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys) under the **Advanced** section. |
+| `clerkJSVariant?` | `string` | If your web application uses only Control components you can set this value to `headless` and load a minimal ClerkJS bundle for optimal page performance. |
+| `supportEmail?` | `string` | Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages. |
+| `localization` | <code>[Localization](/docs/components/customization/localization) \| undefined</code> | Optional object to localize your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `allowedRedirectOrigins?` | `Array<string \| RegExp>` | Optional array of domains used to validate against the query param of an auth redirect. If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>publishableKey</code>,
-        <code>string</code>,
-        `Clerk publishable key for your instance. This can be found in your Clerk Dashboard.`,
-      ],
-    },
-    {
-      cells: [
-        <code>frontendApi</code>,
-        <code>string</code>,
-        "The frontend API host for your instance. This can be found in your Clerk Dashboard.",
-      ],
-    },
-    {
-      cells: [
-        <code>clerkJSVariant?</code>,
-        <code>string</code>,
-        "If your web application uses only Control components you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance.",
-      ],
-    },
-    {
-      cells: [
-        <code>supportEmail?</code>,
-        <code>string</code>,
-        "Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.",
-      ],
-    },
-    {
-      cells: [
-        <code>localization?</code>,
-        <code>object</code>,
-        "Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.",
-      ],
-    },
-    {
-      cells: [
-        <code>allowedRedirectOrigins?</code>,
-        <code>{`Array<string | RegExp>`}</code>,
-        "Optional array of domains used to validate against the query param of an auth redirect.\n\nIf no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.",
-      ],
-    },
-  ]}
-/>
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
