--- a/docs/testing/cypress.mdx
+++ b/docs/testing/cypress.mdx
@@ -73,7 +73,7 @@ Cypress.Commands.add(`signIn`, () => {
 
 ## Simple tests
 
-Now that some simple commands have been created, here are some examples on how to write some simple tests.
+Now that some commands have been created, here are some examples on how to write some basic tests.
 
 This example will be testing a simple dashboard page that displays different content depending on whether the user is signed in or not.
 
