--- a/docs/testing/cypress.mdx
+++ b/docs/testing/cypress.mdx
@@ -71,11 +71,11 @@ Cypress.Commands.add(`signIn`, () => {
 }
 ```
 
-## Simple tests
+## Basic tests
 
 Now that some commands have been created, here are some examples on how to write some basic tests.
 
-This example will be testing a simple dashboard page that displays different content depending on whether the user is signed in or not.
+This example will be testing a basic dashboard page that displays different content depending on whether the user is signed in or not.
 
 ```jsx
 import { SignedIn, SignedOut } from "@clerk/nextjs";
