ix App Router code example

--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -18,7 +18,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx filename="userButtonExample.[jsx/tsx]"
+      ```jsx filename="layout.[jsx/tsx]"
       import {
         ClerkProvider,
         SignedIn,
@@ -28,7 +28,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
       } from "@clerk/nextjs";
 
       function Header() {
-      return (
+        return (
           <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
             <h1>My App</h1>
             <SignedIn>
@@ -40,18 +40,19 @@ In this example, `<UserButton />` is mounted inside a header component, which is
               <SignInButton />
             </SignedOut>
           </header>
-      );
-      }
-
-      function MyApp({ pageProps }) {
-        return (
-          <ClerkProvider {...pageProps}>
-            <Header />
-          </ClerkProvider>
         );
       }
 
-      export default MyApp;
+      export default function RootLayout({ children }: { children: React.ReactNode }) {
+        return (
+          <html lang="en">
+            <ClerkProvider>
+              <Header />
+              {children}
+            </ClerkProvider>
+          </html>
+        );
+      }
       ```
 
       ```jsx filename="userButtonExample.[jsx/tsx]"
