remove links to FAPI reference (outdated)

--- a/docs/troubleshooting/overview.mdx
+++ b/docs/troubleshooting/overview.mdx
@@ -7,7 +7,7 @@ description: Learn how to troubleshoot common issues with Clerk and contact supp
 
 We hope that our documentation is thorough and transparent enough that you won't run into any issues. If you can't find what you're looking for in the navigation sidebar, use the search function of the docs to track down the information you need.
 
-Refer to the [Backend API](https://clerk.com/docs/reference/backend-api) and [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) reference docs for questions about object structures, requests, and responses.
+Refer to the [Backend API](https://clerk.com/docs/reference/backend-api) and Frontend API reference docs for questions about object structures, requests, and responses.
 
 Are you looking for a place to get started? Check out our [Quickstarts & Tutorials](/docs/quickstarts/overview) section.
 
