--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -58,7 +58,7 @@ Actor tokens are consumed the same way as sign in tokens.
 
 Actor tokens can be [created from the Backend API](https://clerk.com/docs/reference/backend-api/tag/Actor-Tokens#operation/CreateActorToken). Once you've successfully created an actor token, you can use the `url` attribute of the response to consume the token and impersonate a user.
 
-The `url` attribute is a [Clerk Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) URL that will use the token to sign out existing users and prepare the sign-in object for impersonation. You can directly visit the `url` provided in the response to consume the actor token.
+The `url` attribute is a Clerk Frontend API URL that will use the token to sign out existing users and prepare the sign-in object for impersonation. You can directly visit the `url` provided in the response to consume the actor token.
 
 The Clerk Frontend API will redirect you to the /sign-in page of your application, where you can continue the flow by consuming the `__clerk_ticket` parameter.
 
