--- a/docs/upgrade-guides/progressive-sign-up.mdx
+++ b/docs/upgrade-guides/progressive-sign-up.mdx
@@ -13,7 +13,7 @@ Progressive Sign Up is a new Sign Up flow introduced in Q2 2022, that aims to im
 
 It can be enabled using the [Instance Settings][instance-settings] endpoint from the Backend API.
 
-Progressive Sign Up involves changes in the responses of the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference). That said, there are no structural changes in the keys of the response payloads or any new types introduced. The changes only apply to some existing fields of the [Sign Up object](https://reference.clerk.dev/reference/frontend-api-reference/user-api/sign-ups), namely `missing_fields`, `unverified_fields`, and `status`. The possible values of those fields also haven not changed - what changes is when each of those values is returned.
+Progressive Sign Up involves changes in the responses of the Frontend API. That said, there are no structural changes in the keys of the response payloads or any new types introduced. The changes only apply to some existing fields of the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object, namely `missing_fields`, `unverified_fields`, and `status`. The possible values of those fields also haven not changed - what changes is when each of those values is returned.
 
 ## What’s changed
 On a high level, Progressive Sign Up contains the following changes:
